--- a/index.html
+++ b/index.html
@@ -19,20 +19,32 @@ h1{
     text-shadow:2px 2px 10px black;
 }
 
+/* CENTER BUTTONS PERFECTLY */
 .btn{
     padding:15px 35px;
     font-size:22px;
     border:none;
     border-radius:50px;
     cursor:pointer;
-    margin:20px;
     position:absolute;
+    z-index:1;
 }
 
-#yes{ background:#28a745; left:45%; top:60%; }
-#no{ background:#dc3545; left:55%; top:60%; }
+#yes{
+    background:#28a745;
+    left:50%;
+    top:55%;
+    transform:translate(-120%, -50%);
+}
 
-/* popup */
+#no{
+    background:#dc3545;
+    left:50%;
+    top:55%;
+    transform:translate(20%, -50%);
+}
+
+/* POPUP */
 #popup{
     display:none;
     position:fixed;
@@ -40,14 +52,13 @@ h1{
     transform:translate(-50%,-50%);
     background:white;
     color:#ff4081;
-    padding:30px 40px;
+    padding:25px 30px;
     border-radius:20px;
-    font-size:30px;
     box-shadow:0 0 30px rgba(0,0,0,0.4);
     z-index:999;
 }
 
-/* roses */
+/* ROSES */
 .rose{
     position:fixed;
     top:-50px;
@@ -58,11 +69,10 @@ h1{
     to{ transform:translateY(110vh) rotate(360deg); }
 }
 
-/* confetti */
+/* CONFETTI */
 .confetti{
     position:fixed;
     width:10px; height:10px;
-    background:yellow;
     top:-10px;
     animation: fall linear forwards;
 }
@@ -71,23 +81,28 @@ h1{
 
 <body>
 
-<h1>Will you accept my Rose? 🌹❤️</h1>
+<h1>Will you accept my Rose? 🌹 ❤️</h1>
 
 <button id="yes" class="btn" onclick="yesClick()">YES 💖</button>
 <button id="no" class="btn" onmouseover="moveNo()">NO 😜</button>
 
-<div id="popup">Yayyyyy 💘 Happy Rose Day 🌹</div>
-
-<audio id="music" loop>
-<source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_115b9bce09.mp3?filename=romantic-love-112199.mp3">
-</audio>
+<div id="popup">
+    <h2>Yayyyyy 💘 Happy Rose Day 🌹</h2>
+    <iframe width="420" height="236"
+        src=""
+        id="ytplayer"
+        frameborder="0"
+        allow="autoplay; encrypted-media"
+        allowfullscreen>
+    </iframe>
+</div>
 
 <script>
 function yesClick(){
-    const music = document.getElementById("music");
-    music.src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_115b9bce09.mp3?filename=romantic-love-112199.mp3";
-    music.play();
     document.getElementById("popup").style.display="block";
+    const yt=document.getElementById("ytplayer");
+
+    yt.src="https://www.youtube-nocookie.com/embed/1ZYbU82GVz4?autoplay=1";
     startConfetti();
 }
 
@@ -111,14 +126,13 @@ function createRose(){
 }
 setInterval(createRose,300);
 
-/* 🎉 confetti explosion */
+/* confetti */
 function startConfetti(){
     for(let i=0;i<150;i++){
         const c=document.createElement("div");
         c.classList.add("confetti");
         c.style.left=Math.random()*100+"vw";
-        c.style.backgroundColor=
-          "hsl("+Math.random()*360+",100%,50%)";
+        c.style.backgroundColor="hsl("+Math.random()*360+",100%,50%)";
         c.style.animationDuration=(Math.random()*3+2)+"s";
         document.body.appendChild(c);
         setTimeout(()=>c.remove(),5000);
