--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function yesClick(){
     document.getElementById("popup").style.display="block";
     const yt=document.getElementById("ytplayer");
 
-    yt.src="https://www.youtube-nocookie.com/embed/1ZYbU82GVz4?autoplay=1";
+    yt.src="https://www.youtube-nocookie.com/embed/UnUEwODlghE?autoplay=1";
     startConfetti();
 }
 
