--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Happy Rose Day 🌹</title>
+<title> 🌹 Happy Rose Day 🌹</title>
 
 <style>
 body{
@@ -81,13 +81,13 @@ h1{
 
 <body>
 
-<h1>Will you accept my Rose? 🌹 ❤️</h1>
+<h1>Will you accept my Rose? 🌹 ❤️ 😘😍😘😘</h1>
 
 <button id="yes" class="btn" onclick="yesClick()">YES 💖</button>
-<button id="no" class="btn" onmouseover="moveNo()">NO 😜</button>
+<button id="no" class="btn" onmouseover="moveNo()">NO 😒</button>
 
 <div id="popup">
-    <h2>Yayyyyy 💘 Happy Rose Day 🌹</h2>
+    <h2> 😉❤️ A single rose for my single heartbeat—You! Happy Rose Day! 😘😘💘</h2>
     <iframe width="420" height="236"
         src=""
         id="ytplayer"
