--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ h1{
 
 <h1>Will you accept my Rose? 🌹 ❤️ 😘😍😘😘</h1>
 
-<button id="yes" class="btn" onclick="yesClick()">YES 💖</button>
+<button id="yes" class="btn" onclick="yesClick()">YES 😘</button>
 <button id="no" class="btn" onmouseover="moveNo()">NO 😒</button>
 
 <div id="popup">
