--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> 🌹 Happy Rose Day 🌹</title>
+<title>Happy Rose Day 🌹</title>
 
 <style>
 body{
@@ -9,6 +9,9 @@ body{
     overflow:hidden;
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(135deg,#ff5f8f,#ff99ac);
+    background-size:cover;
+    background-position:center;
+    transition: background 1s ease;
     text-align:center;
     color:white;
 }
@@ -19,7 +22,6 @@ h1{
     text-shadow:2px 2px 10px black;
 }
 
-/* CENTER BUTTONS PERFECTLY */
 .btn{
     padding:15px 35px;
     font-size:22px;
@@ -44,7 +46,6 @@ h1{
     transform:translate(20%, -50%);
 }
 
-/* POPUP */
 #popup{
     display:none;
     position:fixed;
@@ -58,7 +59,6 @@ h1{
     z-index:999;
 }
 
-/* ROSES */
 .rose{
     position:fixed;
     top:-50px;
@@ -69,7 +69,6 @@ h1{
     to{ transform:translateY(110vh) rotate(360deg); }
 }
 
-/* CONFETTI */
 .confetti{
     position:fixed;
     width:10px; height:10px;
@@ -87,7 +86,7 @@ h1{
 <button id="no" class="btn" onmouseover="moveNo()">NO 😒</button>
 
 <div id="popup">
-    <h2> 😉❤️ A single rose for my single heartbeat—You! Happy Rose Day! 😘😘💘</h2>
+    <h2>😉❤️ A single rose for my single heartbeat—You! Happy Rose Day! 😘😘💘</h2>
     <iframe width="420" height="236"
         src=""
         id="ytplayer"
@@ -100,9 +99,15 @@ h1{
 <script>
 function yesClick(){
     document.getElementById("popup").style.display="block";
-    const yt=document.getElementById("ytplayer");
 
+    // 🎵 Play your YouTube song
+    const yt=document.getElementById("ytplayer");
     yt.src="https://www.youtube-nocookie.com/embed/UnUEwODlghE?autoplay=1";
+
+    // 📸 Change background to your Google Drive photo
+    document.body.style.backgroundImage =
+    "url('https://drive.google.com/uc?export=view&id=1SJKqwwe9_pkh0xL5tUB-7L_6kjVmYsBP')";
+
     startConfetti();
 }
 
@@ -114,7 +119,6 @@ function moveNo(){
     btn.style.top=y+"px";
 }
 
-/* falling roses */
 function createRose(){
     const rose=document.createElement("div");
     rose.classList.add("rose");
@@ -126,7 +130,6 @@ function createRose(){
 }
 setInterval(createRose,300);
 
-/* confetti */
 function startConfetti(){
     for(let i=0;i<150;i++){
         const c=document.createElement("div");
