--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ body{
     background: linear-gradient(135deg,#ff5f8f,#ff99ac);
     background-size:cover;
     background-position:center;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
     transition: background 1s ease;
     text-align:center;
     color:white;
@@ -100,13 +102,17 @@ h1{
 function yesClick(){
     document.getElementById("popup").style.display="block";
 
-    // 🎵 Play your YouTube song
+    // 🎵 Play YouTube song
     const yt=document.getElementById("ytplayer");
     yt.src="https://www.youtube-nocookie.com/embed/UnUEwODlghE?autoplay=1";
 
-    // 📸 Change background to your Google Drive photo
-    document.body.style.backgroundImage =
-    "url('https://drive.google.com/uc?export=view&id=1SJKqwwe9_pkh0xL5tUB-7L_6kjVmYsBP')";
+    // 📸 Load Google Drive image then set as background
+    const img = new Image();
+    img.src = "https://lh3.googleusercontent.com/d/1SJKqwwe9_pkh0xL5tUB-7L_6kjVmYsBP";
+
+    img.onload = function(){
+        document.body.style.backgroundImage = "url('" + img.src + "')";
+    };
 
     startConfetti();
 }
